# MazeBuilder

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  binary_tree_demo.rb  binary_tree_maze_40_30.txt  cell.rb  grid.rb  hello-ruby.rb  secure_http_server.py
EscapeFromFog/: Bullet.cpp  Bullet.hpp  EscapeFromFog.cpp  EscapeFromFog.hpp  EscapeFromFog.pro  IApplication.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  Main.cpp
EscapeFromFog2/: EscapeFromFog2.hpp  EscapeFromFog2.pro  ImGuiHelper.hpp  KillDashNine.cpp  KillDashNine.pro  Main.cpp
KillDashNine/: Enemy.cpp  Enemy.hpp  IState.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  KillDashNine.cpp  KillDashNine.hpp  KillDashNine.pro  LevelGenerator.cpp  LevelGenerator.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  ResourceIds.hpp  ResourceLevels.hpp  ResourcePaths.hpp  StateMap.cpp  StateMap.hpp  TitleState.cpp  TitleState.hpp
ShooterGame/: Enemy.cpp  ImGuiHelper.cpp  ImGuiHelper.hpp  Main.cpp  ShooterGame.cpp  ShooterGame.hpp  ShooterGame.pro
cmake/: CppCheck.cmake  FetchGitRepo.cmake  (+8 more)
docs/: CMakeLists.txt  GRID_FACTORY_ARCHITECTURE.md  README.md  overview.md
examples/: CMakeLists.txt
examples/CLI/: CMakeLists.txt  batch_processor.cpp  batch_processor.h  cli.cpp  cli.h  main.cpp  parser.cpp  parser.h
examples/Generator/: CMakeLists.txt  Generator.cpp  Generator.hpp  Main.cpp
examples/Generator/resources/: Kenney License.txt
examples/Http/: CMakeLists.txt  README.md  http_client.cpp  http_client.h  main.cpp  terminal_gui.cpp  terminal_gui.h
examples/MazeBuilderJS/: CMakeLists.txt  main.cpp  my_lib.cpp  my_lib.hpp
examples/Physics/: AudioHelper.cpp  AudioHelper.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  Category.hpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp  CoutThreadSafe.hpp  Drawable.hpp  Entity.cpp  Entity.hpp  Font.cpp  Font.hpp  GameState.cpp  GameState.hpp  HttpClient.cpp  HttpClient.hpp  JsonUtils.hpp  Level.cpp  Level.hpp  LoadingState.cpp  LoadingState.hpp  Main.cpp  Maze.cpp  Maze.hpp  MazeLayout.cpp  MazeLayout.hpp  MazeNode.cpp  MazeNode.hpp  MazeRenderer.cpp  MazeRenderer.hpp  MenuState.cpp  MenuState.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  ParallaxNode.cpp  ParallaxNode.hpp  Pathfinder.cpp  (+80 more)
examples/Physics/resources/: Cousine_Regular.h  Limelight_Regular.h  nunito_sans.h  physics.json
examples/Simultageous/: AudioHandler.cpp  AudioHandler.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp
examples/Snake/: CMakeLists.txt  Main.cpp  Snake.cpp
examples/Voxels/: BUILD_STATUS.md  CMakeLists.txt  COMPILATION_FIXES.md  FINAL_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MAZE_PREVIEW_STATUS.md  MAZE_PROJECTION_GUIDE.md  NULL_POINTER_FIX.md  QUICK_START.md  TEST_PATTERN_IMPLEMENTATION.md  bloom_effects.cpp  bloom_effects.h  chunk_manager.cpp  chunk_manager.h  craft.cpp  craft.h  craft_types.h  craft_utils.cpp  craft_utils.h  db.cpp  event_handler.h  gl_buffer_manager.cpp  gl_buffer_manager.h  gl_renderer.cpp  gl_renderer.h  gl_resource_manager.cpp  gl_resource_manager.h  gl_types.h  item.cpp  item.h  main.cpp  math_utils.h  matrix.cpp  maze_projector.cpp  maze_projector.h  render_pipeline.cpp  render_pipeline.h  ring.cpp  ring.h  sign.h  (+6 more)
examples/Voxels/shaders/: block_fragment.glsl  block_vertex.glsl  blur_fragment.glsl  blur_vertex.glsl  line_fragment.glsl  maze_fragment.glsl  maze_vertex.glsl  screen_fragment.glsl  sky_fragment.glsl  sky_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  stencil_fragment.glsl  stencil_vertex.glsl  text_fragment.glsl  text_vertex.glsl
examples/Voxels/shaders/es/: block_fragment.es.glsl  block_vertex.es.glsl  blur_fragment.es.glsl  blur_vertex.es.glsl  line_fragment.es.glsl  line_vertex.es.glsl  screen_fragment.es.glsl  screen_vertex.es.glsl  skybox_fragment.es.glsl  skybox_vertex.es.glsl  text_fragment.es.glsl
sources/: CMakeLists.txt  MazeBuilderConfig.cmake  args.cpp  args_builder.cpp  args_builder.h  args_builder_interface.h  args_handler.cpp  args_handler.h  auth.cpp  base64_helper.cpp  binary_tree.cpp  binary_tree.h  bst.cpp  bst.h  bst_maze.cpp  bst_maze.h  builder.cpp  cell.cpp  cell.h  cell_factory.cpp  client.cpp  colored_grid.cpp  colored_grid.h  computations.cpp  config.h  craft.cpp  craft.h  craft_utils.cpp  craft_utils.h  cube.cpp  db.cpp  db.h  dfs.cpp  distance_grid.cpp  distance_grid.h  distances.cpp  distances.h  factory.cpp  file_types_enum.h  grid.cpp  (+49 more)
src/: Blowtorch.cpp  Blowtorch.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  GameImpl.cpp  GameImpl.hpp  IGame.hpp  Level.cpp  Level.hpp  Main.cpp  Particle.cpp  Particle.hpp  Player.cpp  Player.hpp  Power.hpp  PowerUp.hpp  ResourceConstants.hpp  Shooter.cpp  Shooter.hpp  Useless.cpp  Useless.hpp
src/engine/: BoundingBox.hpp  Camera.cpp  ImGuiHelper.cpp  ImGuiHelper.hpp  Logger.cpp  Logger.hpp  OsConfig.hpp  RenderText.cpp  RenderText.hpp  ResourceManager.cpp  ResourceManager.hpp  SdlWindow.cpp  SdlWindow.hpp  Text.cpp  Text.hpp  Transform.cpp  Utils.hpp  Vertex.hpp  gl_core_4_3.c  gl_core_4_3.h
src/engine/audio/: Chunk.hpp  Music.hpp  SdlMixer.hpp
src/engine/graphics/: Entity.cpp  Entity.hpp  Font.cpp  Font.hpp  GlUtils.cpp  GlUtils.hpp  IDrawable.hpp  ITexture.hpp  IndexedMeshImpl.cpp  IndexedMeshImpl.hpp  MeshImpl.cpp  PostProcessorImpl.cpp  PostProcessorImpl.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Sprite.cpp  Sprite.hpp  Tex2dImpl.cpp  Tex2dImpl.hpp  TexPerlinImpl.cpp  TexPerlinImpl.hpp  TexSkyboxImpl.cpp  TexSkyboxImpl.hpp
tests/: CMakeLists.txt  array.json  maze.json  maze_dfs.json  test1.cpp  test_algorithms.cpp  test_args.cpp  test_args_can_parse.cpp  test_binary_tree.cpp  test_bst.cpp  test_create.cpp  test_custom_mazes.cpp  test_distances.cpp  test_factorials.cpp  test_factory_create.cpp  test_factory_workflow.cpp  test_grid.cpp  test_grid_range.cpp  test_io_utils.cpp  test_lab_is_linkable.cpp  test_lab_set_neighbors_using_links.cpp  test_maze.cpp  test_randomizer_simple.cpp  test_string_utils.cpp  test_stringz.cpp  test_writer.cpp
(+181 files in other folders)
