
option(MAZE_BUILD_WEB_EXAMPLES "Build ${PROJECT_NAME} examples for the Web!" OFF)
option(MAZE_BUILD_DESKTOP_EXAMPLES "Build ${PROJECT_NAME} examples for the Desktop!" OFF)

if(MAZE_BUILD_WEB_EXAMPLES)
    if(NOT EMSCRIPTEN)
        message(FATAL_ERROR "Emscripten is required to build ${PROJECT_NAME} examples for the Web!")
    endif()
    message(INFO ": Building ${PROJECT_NAME} examples for the Web!")
    add_subdirectory(Voxels)
    add_subdirectory(MazeBuilderJS)
elseif(MAZE_BUILD_DESKTOP_EXAMPLES)
    message(INFO ": Building ${PROJECT_NAME} examples for the Desktop!")
    add_subdirectory(Voxels)
    add_subdirectory(CLI)
endif()